[gd_scene load_steps=10 format=3 uid="uid://b5depasdf35sq"]

[ext_resource type="Script" path="res://scripts/doodle_jump.gd" id="1_ju6y1"]
[ext_resource type="PackedScene" uid="uid://bxscb4bjgy1gq" path="res://scenes/actors/player_green.tscn" id="1_lrlq2"]
[ext_resource type="PackedScene" uid="uid://rduh7it0bcmo" path="res://scenes/platforms/variant_platform.tscn" id="3_4yfsj"]
[ext_resource type="PackedScene" uid="uid://c7bgfpnjb26d0" path="res://scenes/platforms/platform.tscn" id="3_ak8x5"]
[ext_resource type="PackedScene" uid="uid://dvef0qo4c5y5m" path="res://scenes/platforms/cloud_platform.tscn" id="4_17mq0"]
[ext_resource type="PackedScene" uid="uid://pufsv800g5je" path="res://scenes/platforms/variant_platform_2.tscn" id="4_fosdo"]
[ext_resource type="PackedScene" uid="uid://devhlevrt8ytn" path="res://scenes/platforms/spring_platform.tscn" id="5_rmu8l"]
[ext_resource type="FontFile" uid="uid://duwkkfgiq1w8f" path="res://assets/fonts/Kenney Pixel.ttf" id="8_on5mq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n8ruq"]
size = Vector2(180, 20)

[node name="DoodleJump" type="Node2D"]
script = ExtResource("1_ju6y1")
platform_scene = Array[PackedScene]([ExtResource("3_ak8x5"), ExtResource("3_4yfsj"), ExtResource("4_fosdo"), ExtResource("5_rmu8l"), ExtResource("4_17mq0")])

[node name="platform_container" type="Node2D" parent="."]

[node name="platform" parent="platform_container" instance=ExtResource("3_ak8x5")]
position = Vector2(89, 280)

[node name="camera" type="Camera2D" parent="."]
position = Vector2(90, 160)

[node name="score_label" type="Label" parent="camera"]
custom_minimum_size = Vector2(90, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_top = -147.0
offset_bottom = -135.0
grow_horizontal = 2
scale = Vector2(2, 2)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("8_on5mq")
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="platform_cleaner" type="Area2D" parent="camera"]
position = Vector2(-90, -154)

[node name="CollisionShape2D" type="CollisionShape2D" parent="camera/platform_cleaner"]
position = Vector2(90, 337)
shape = SubResource("RectangleShape2D_n8ruq")

[node name="buttons" type="HBoxContainer" parent="camera"]
custom_minimum_size = Vector2(180, 70)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.0
offset_top = 80.0
offset_right = 90.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 10
theme_override_constants/separation = 20
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Left_button" type="Button" parent="camera/buttons"]
modulate = Color(1, 0.168627, 0.113725, 0.215686)
self_modulate = Color(0.0666667, 1, 0.0666667, 0.737255)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 95
toggle_mode = true
button_pressed = true
action_mode = 0

[node name="Right_button" type="Button" parent="camera/buttons"]
modulate = Color(1, 0.168627, 0.113725, 0.215686)
self_modulate = Color(0.0666667, 1, 0.0666667, 0.737255)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 95
toggle_mode = true
button_pressed = true
action_mode = 0

[node name="player" parent="." instance=ExtResource("1_lrlq2")]
position = Vector2(90, 160)

[connection signal="body_entered" from="camera/platform_cleaner" to="." method="_on_platform_cleaner_body_entered"]
[connection signal="button_down" from="camera/buttons/Left_button" to="player" method="_on_left_button_button_down"]
[connection signal="button_up" from="camera/buttons/Left_button" to="player" method="_on_left_button_button_up"]
[connection signal="button_down" from="camera/buttons/Right_button" to="player" method="_on_right_button_button_down"]
[connection signal="button_up" from="camera/buttons/Right_button" to="player" method="_on_right_button_button_up"]
